--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
             const polisdata = [
                 {
+                    år: "2021",
+                    poliser: 21169,
+                    civila: 12920,
+                    befolkning: 10452326
+                },
+                {
                     år: "2020",
                     poliser: 20942,
                     civila: 12784,
