--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <h2>Poliser per invånare</h2>
     <canvas id="per_capita" width="400" height="100"></canvas>
 
-    <h2 style="margin-top: 50px;">Antal poliser</h2>
+    <h2 style="margin-top: 50px;">Polisanställda</h2>
     <canvas id="poliser" width="400" height="100"></canvas>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
